--- a/inst/htmlwidgets/lib/sequences/sequences.css
+++ b/inst/htmlwidgets/lib/sequences/sequences.css
@@ -5,8 +5,8 @@
 
 .sunburst-sidebar {
   position: absolute;
-  width: 10%;
-  left: 90%;
+  width: 20%;
+  left: 80%;
   top: 10px;
 }
 
@@ -23,8 +23,8 @@
 }
 
 .sunbrust-sequence text, .sunburst-legend text {
-  font-weight: 600;
   fill: #fff;
+  font-size: small;
 }
 
 .sunburst-chart {
@@ -43,6 +43,6 @@
   text-align: center;
   color: #666;
   z-index: 999;
-  font-size: 2em;
+  font-size: 1.3em;
   pointer-events: none;
 }
