--- a/inst/htmlwidgets/lib/sequences/sequences.css
+++ b/inst/htmlwidgets/lib/sequences/sequences.css
@@ -24,6 +24,7 @@
 .sunburst-legend {
   padding: 2px 0 0 3px;
   background-color: #000;
+  color: #fff;
 }
 
 .sunbrust-sequence text, .sunburst-legend text {
@@ -46,8 +47,8 @@
 .sunburst-explanation {
   position: absolute;
   text-align: center;
-  color: #666;
+  color: #fff;
   z-index: 999;
-  font-size: 1.3em;
+  font-size: 1em;
   pointer-events: none;
 }
